fix: fix amount gap in tickets section

--- a/museum/styles/blocks/_tickets.scss
+++ b/museum/styles/blocks/_tickets.scss
@@ -70,6 +70,9 @@
 
     &-counter {
       margin-bottom: rem(50);
+      display: flex;
+      flex-direction: column;
+      gap: rem(10);
 
       &--basic,
       &--senior {
